# photoAnlz

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  myview.cpp  myview.h  paramImageAfterAnalyze.h  parserjson.cpp  parserjson.h  photoAnlz.pro
